--- a/css/jquery.multicheck.css
+++ b/css/jquery.multicheck.css
@@ -1,37 +1,16 @@
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+.multicheck-container.multicheck-wrap-container {
+  overflow: auto;
+  border: 1px solid #c0c0c0;
+  max-height: 100px;
 }
 
-.header h3 {
-  padding-bottom: 19px;
-  margin-top: 0;
+.multicheck-wrap-container label {
+  padding-left: 3px;
   margin-bottom: 0;
-  line-height: 40px;
+  font-weight: normal;
 }
 
-.jumbotron {
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-pre {
-	padding: 0;
-}
-
-select {
-	width: 100px;
-}
-
-label {
-	display: block;
+.multicheck-wrap-container .multicheck-on {
+  background-color: #3399ff;
+  color: white;
 }
