--- a/css/jquery.multicheckbox.css
+++ b/css/jquery.multicheckbox.css
@@ -1,16 +1,16 @@
-.multicheck-container.multicheck-wrap-container {
+.multicheckbox-container.multicheckbox-wrap-container {
   overflow: auto;
   border: 1px solid #c0c0c0;
   max-height: 100px;
 }
 
-.multicheck-wrap-container label {
+.multicheckbox-wrap-container label {
   padding-left: 3px;
   margin-bottom: 0;
   font-weight: normal;
 }
 
-.multicheck-wrap-container .multicheck-on {
+.multicheckbox-wrap-container .multicheckbox-on {
   background-color: #3399ff;
   color: white;
 }
